@@ -131,73 +131,6 @@ namespace Paths
 
         #endregion Parse
 
-        //TODO: Remove this region.
-
-        //#region Cache
-
-        //public static Vector3[] BuildCache(ISpline spline, uint numMidPoints)
-        //{
-        //    Vector3[] points = new Vector3[numMidPoints + 2];
-        //    for (int i = 0; i <= points.Length - 1; i++)
-        //        points[i] = spline.Evaluate((float)i / (points.Length - 1));
-
-        //    return points;
-        //}
-
-        ////public static Vector3[] BuildCache(Path3D path, uint numMidPoints)
-        ////{
-        ////    Vector3[] points = new Vector3[numMidPoints + 2];
-        ////    for (int i = 0; i <= points.Length - 1; i++)
-        ////        points[i] = path.Evaluate((float)i / (points.Length - 1));
-
-        ////    return points;
-        ////}
-
-        //public static Vector3 InterpolateCache(Vector3[] cache, float t)
-        //{
-        //    InterpolateCacheInfo info = new InterpolateCacheInfo(cache, t);
-        //    return Vector3.Lerp(cache[info.LowerIndex], cache[info.LowerIndex + 1], info.PercentOfIndexes);
-        //}
-
-        //public static Vector3 InterpolateCache(Vector3[] cache, float t, out InterpolateCacheInfo info)
-        //{
-        //    info = new InterpolateCacheInfo(cache, t);
-        //    return Vector3.Lerp(cache[info.LowerIndex], cache[info.LowerIndex + 1], info.PercentOfIndexes);
-        //}
-
-        //public struct InterpolateCacheInfo
-        //{
-        //    public readonly int LowerIndex;
-        //    public readonly float PercentOfIndexes;
-
-        //    public InterpolateCacheInfo(Vector3[] cache, float t)
-        //    {
-        //        float percentOfIndexes;
-        //        int lowerIndex;
-
-        //        //~ Make sure t is a valid number
-        //        t = Mathf.Clamp01(t);
-
-        //        if (Mathf.Approximately(t, 1f)) // avoid index out of bounds
-        //        {
-        //            lowerIndex = cache.Length - 2;
-        //            percentOfIndexes = 1f;
-        //        }
-        //        else
-        //        {
-        //            percentOfIndexes = t * (cache.Length - 1);
-        //            lowerIndex = Mathf.FloorToInt(percentOfIndexes);
-        //            if (lowerIndex != 0) // avoid NaN from indexInterpolant % 0
-        //                percentOfIndexes = percentOfIndexes % lowerIndex; // store value that is inbetween 0 and 1.
-        //        }
-
-        //        LowerIndex = lowerIndex;
-        //        PercentOfIndexes = percentOfIndexes;
-        //    }
-        //}
-
-        //#endregion Cache
-
         #region DebugDraw
 
         public static void DebugDrawSpline(ISpline spline, int numMidPoints)
@@ -265,25 +198,6 @@ namespace Paths
         #endregion DebugDraw
 
         #region Twist
-
-        //TODO: Do I still need this commented code block?...
-        // public static Quaternion Twist(Path3D core, float coreT, Path3D guide, float guideT) {
-        // Vector3 corePoint = core.Evaluate(coreT); Vector3 rotationPoint = guide.Evaluate(guideT);
-
-        // Vector3 tangentBasis = core.Tangent(coreT); tangentBasis = tangentBasis.normalized;
-
-        // Vector3 normalBasis = Vector3.Cross(tangentBasis, rotationPoint - corePoint); normalBasis
-        // = normalBasis.normalized;
-
-        // #region Uncomment this region to debug all Twist invocations /* Vector3 binormalBasis =
-        // Vector3.Cross(normalBasis, tangentBasis); binormalBasis = binormalBasis.normalized;
-
-        // Debug.DrawLine(corePoint, corePoint + tangentBasis, Color.blue);
-        // Debug.DrawLine(corePoint, corePoint + normalBasis, Color.green);
-        // Debug.DrawLine(corePoint, corePoint + binormalBasis, Color.red);
-        // * / #endregion
-
-        // return Quaternion.LookRotation(tangentBasis, normalBasis); }
 
         public static Quaternion Twist(ISpline core, float coreT, ISpline guide, float guideT)
         {
