@@ -231,7 +231,7 @@ Draw:
         }
 
         // draw tangent lines
-        if (settings.DrawTangentLines)
+        if (!settings.HideTangentLines)
         {
             Handles.color = Color.cyan;
             Handles.DrawDottedLine(worldBezier.StartPosition, worldBezier.MidTangent, 7.5f);
